--- a/style.css
+++ b/style.css
@@ -35,6 +35,11 @@ p {
     margin: 15px 0 20px 0;
 }
 
+.logo {
+    width: 60px;
+    height: 60px;
+}
+
 .section-p1 {
     padding: 40px 80px;
 }
